# axum_blueprint

./: Cargo.toml
src/: config.rs  main.rs  openapi.rs
src/handlers/: page.rs
